apps/marketing/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rigel-marketing
  namespace: default
  labels:
    app: rigel-marketing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rigel-marketing
  template:
    metadata:
      labels:
        app: rigel-marketing
    spec:
      imagePullSecrets:
      - name: ghrc
      containers:
      - image: ghcr.io/tyrelchambers/rigel-marketing:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 20
        name: web
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 10
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
